Resolved Minor layout issues

--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -54,15 +54,13 @@
             android:id="@+id/btn_riskEvaluation"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginEnd="216dp"
-            android:layout_marginRight="216dp"
             android:background="#00FFFFFF"
             android:src="@mipmap/ic_risk_eval"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.428"
+            app:layout_constraintEnd_toStartOf="@+id/guideline10"
+            app:layout_constraintHorizontal_bias="0.114"
             app:layout_constraintStart_toStartOf="@+id/guideline9"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.172" />
